# PT-JPL

./: .gitignore  Geolocation Sensitivity MJ.ipynb  Geolocation Sensitivity.ipynb  PTJPL Sensitivity.ipynb  README.md  Tower Input Data.ipynb  calval_final_50_PTJPL_inputs.csv  combined_eco_flux_EC_filtered.csv  example_LE.jpeg.aux.xml  example_LE.tif.aux.xml  farms_subset.tif  makefile  metadata_ebc_filt.csv  pyproject.toml
.github/workflows/: ci.yml
PTJPL/: ECOv002-cal-val-PT-JPL-inputs.csv  ECOv002-cal-val-PT-JPL-outputs.csv  ECOv002-static-tower-PT-JPL-inputs.csv  ECOv002_calval_PTJPL_inputs.py  ECOv002_static_tower_PTJPL_inputs.py  PTJPL.py  Topt.py  __init__.py  constants.py  fAPARmax.py  generate_PTJPL_input_dataset.py  generate_PTJPL_inputs.py  generate_static_PTJPL_input_dataset.py  model.py  process_PTJPL_table.py  verify.py  version.py
PTJPL/meteorology_conversion/: __init__.py  meteorology_conversion.py
PTJPL/net_radiation/: verma_net_radiation.py
PTJPL/partitioning/: __init__.py  canopy_latent_heat_flux.py  fM.py  fSM.py  fT.py  fg.py  fwet.py  interception.py  partitioning.py  soil_latent_heat_flux.py  soil_net_radiation.py
PTJPL/priestley_taylor/: __init__.py  priestley_taylor.py
PTJPL/soil_heat_flux/: calculate_SEBAL_soil_heat_flux.py
PTJPL/vegetation_conversion/: SAVI_from_NDVI.py  __init__.py  fAPAR_from_SAVI.py  fIPAR_from_NDVI.py  vegetation_conversion.py
notebooks/: PTJPL Sensitivity with ECOv002 Cal-Val.ipynb  Tower Input Data for PT-JPLfrom ECOSTRESS Collection 2 Cal-Val.ipynb  Tower Static Input Data for PT-JPL-SM from ECOSTRESS Collection 2 Cal-Val.ipynb
tests/: test_import_PTJPL.py  test_import_dependencies.py  test_verify.py
