[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "PTJPL"
version = "1.4.1"
description = "Priestley-Taylor Jet Propulsion Laboratory Evapotranspiration Model"
readme = "README.md"
authors = [
    { name = "Gregory Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
    { name = "Joshua B. Fisher", email = "jbfisher@chapman.edu" },
    { name = "Claire S. Villanueva-Weeks", email = "claire.s.villanueva-weeks@jpl.gov" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "colored-logging",
    "ECOv002-CMR>=1.0.5",
    "ECOv002-granules>=1.0.3",
    "ECOv003-granules",
    "GEOS5FP>=1.2.2",
    "monte-carlo-sensitivity",
    "numpy",
    "pandas",
    "rasters>=1.7.1",
    "seaborn",
    "SEBAL-soil-heat-flux",
    "solar-apparent-time",
    "verma-net-radiation>=1.2.1"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "build",
    "pytest>=6.0",
    "pytest-cov",
    "jupyter",
    "pytest",
    "twine"
]

[tool.setuptools.package-data]
PTJPL = ["*.txt", "*.tif"]

[project.urls]
"Homepage" = "https://github.com/JPL-Evapotranspiration-Algorithms/PTJPL"
