[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "PTJPL"
version = "1.7.3"
description = "Priestley-Taylor Jet Propulsion Laboratory Evapotranspiration Model"
readme = "README.md"
authors = [
    { name = "Gregory Halverson", email = "gregory.h.halverson@jpl.nasa.gov" },
    { name = "Joshua B. Fisher", email = "jbfisher@chapman.edu" },
    { name = "Claire S. Villanueva-Weeks", email = "claire.s.villanueva-weeks@jpl.gov" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "carlson-leaf-area-index",
    "colored-logging",
    "daylight-evapotranspiration>=1.2.1",
    "GEOS5FP>=1.2.2",
    "meteorology-conversion",
    "numpy",
    "pandas",
    "priestley-taylor",
    "rasters>=1.7.1",
    "SEBAL-soil-heat-flux",
    "solar-apparent-time",
    "verma-net-radiation>=1.8.0"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "build",
    "pytest>=6.0",
    "pytest-cov",
    "jupyter",
    "pytest",
    "twine"
]

[dependency-groups]
sensitivity = [
    "ECOv002-CMR>=1.0.5",
    "ECOv002-granules>=1.0.3",
    "monte-carlo-sensitivity",
    "seaborn",
]

[tool.setuptools.packages.find]
exclude = ["notebooks", "tests"]

[tool.setuptools.package-data]
PTJPL = ["*.csv", "*.tif"]

[project.urls]
"Homepage" = "https://github.com/JPL-Evapotranspiration-Algorithms/PTJPL"